--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Default-p5-Sketch</title>
+    <title>Game of Life</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/socket.io.js" type="text/javascript"></script>
+    <script src="palette-functions.js" type="text/javascript"></script>
+    <script src="scene-class.js" type="text/javascript"></script>
+    <script src="scenes.js" type="text/javascript"></script>
     <script src="frame-export.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
