--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="palette-functions.js" type="text/javascript"></script>
     <script src="scene-class.js" type="text/javascript"></script>
     <script src="scenes.js" type="text/javascript"></script>
+    <script src="scenes02.js" type="text/javascript"></script>
     <script src="frame-export.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
