--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Game of Life</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.min.js" type="text/javascript"></script>
+    <script src="libraries/p5.dom.min.js" type="text/javascript"></script>
     <script src="libraries/socket.io.js" type="text/javascript"></script>
     <script src="palette-functions.js" type="text/javascript"></script>
     <script src="scene-class.js" type="text/javascript"></script>
