--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <script src="palette-functions.js" type="text/javascript"></script>
     <script src="scene-class.js" type="text/javascript"></script>
     <script src="scene-class-parametric.js" type="text/javascript"></script>
+    <script src="scene-class-genetic.js" type="text/javascript"></script>
     <script src="scenes.js" type="text/javascript"></script>
     <script src="scenes02.js" type="text/javascript"></script>
     <script src="scenes03.js" type="text/javascript"></script>
     <script src="parametric-scenes.js" type="text/javascript"></script>
+    <script src="scenes-genetic-01.js" type="text/javascript"></script>
     <script src="frame-export.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
