--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="scenes.js" type="text/javascript"></script>
     <script src="scenes02.js" type="text/javascript"></script>
     <script src="scenes03.js" type="text/javascript"></script>
+    <script src="scenes-to-print.js" type="text/javascript"></script>
     <script src="parametric-scenes.js" type="text/javascript"></script>
     <script src="frame-export.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
