--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="libraries/p5.dom.min.js" type="text/javascript"></script>
     <script src="libraries/socket.io.js" type="text/javascript"></script>
     <script src="palette-functions.js" type="text/javascript"></script>
+    <script src="print-optimized.js" type="text/javascript"></script>
     <script src="scene-class.js" type="text/javascript"></script>
     <script src="scene-class-parametric.js" type="text/javascript"></script>
     <script src="scene-class-genetic.js" type="text/javascript"></script>
