--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="scenes.js" type="text/javascript"></script>
     <script src="scenes02.js" type="text/javascript"></script>
     <script src="scenes03.js" type="text/javascript"></script>
+    <script src="scenes04.js" type="text/javascript"></script>
     <script src="parametric-scenes.js" type="text/javascript"></script>
     <script src="scenes-genetic-01.js" type="text/javascript"></script>
     <script src="frame-export.js" type="text/javascript"></script>
